TAG: uniprotload-4-3-3-16
DATE: 05/20/2010
STAFF: lec
CHANGES:
1) TR 9777/makeInterProAnnot.py/both SwissProt and TrEMBL associations

TAG: uniprotload-4-3-3-15
DATE: 05/19/2010
STAFF: lec
CHANGES:
1) TR 9777/code review changes

TAG: uniprotload-4-3-3-14
DATE: 05/13/2010
STAFF: lec
CHANGES:
1) TR 9777/new
2) added Marker Symbol to buckets

TAG: uniprotload-4-3-3-13
TAG: uniprotload-4-3-3-12
TAG: uniprotload-4-3-3-11
DATE: 05/11/2010
STAFF: lec
CHANGES:
1) TR 9777/new
2) remove TrEMBL associations from makeGOAnnot.py

TAG: uniprotload-4-3-3-10
TAG: uniprotload-4-3-3-9
TAG: uniprotload-4-3-3-8
TAG: uniprotload-4-3-3-7
TAG: uniprotload-4-3-3-6
TAG: uniprotload-4-3-3-5
TAG: uniprotload-4-3-3-4
TAG: uniprotload-4-3-3-3
TAG: uniprotload-4-3-3-2
TAG: uniprotload-4-3-3-1
DATE: 04/01/2010, 04/13/2010
STAFF: lec
CHANGES:
1) TR 9777/new
