@@ -1,3 +1,10 @@
+TAG: uniprotload-4-3-3-17
+DATE: 05/25/2010
+STAFF: lec
+CHANGES:
+1) Install; create empty save files
+2) bin/makeBucketsDiff.py
+
 TAG: uniprotload-4-3-3-16
 DATE: 05/20/2010
 STAFF: lec
